# show-waifu

./: Cargo.toml  README.md
src/: api.rs  app.rs  lib.rs  main.rs
src/api/: danbooru.rs  mod.rs  safebooru.rs
