[package]
name = "show-waifu"
version = "0.1.0"
authors = ["AnOrdinaryUsername <kylemasa2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "3.0.0-beta.2"
colored = "2.0.0"
viu = "1.3.0"
