[package]
name = "show-waifu"
version = "0.1.0"
authors = ["AnOrdinaryUsername <kylemasa2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
clap = "3.0.0-beta.2"
colored = "2.0.0"
viuer = "0.5.1"
anyhow = "1.0"
rand = "0.8.4"
regex = "1.5.4"