[package]
name = "show-waifu"
description = "View random anime fanart in your terminal"
version = "1.0.0"
authors = ["AnOrdinaryUsername <kylemasa2@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/AnOrdinaryUsername/show-waifu"
repository = "https://github.com/AnOrdinaryUsername/show-waifu"
keywords = ["cli", "search", "anime", "terminal", "waifu"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
clap = "3.0.0-beta.2"
colored = "2.0.0"
viuer = "0.5.1"
rand = "0.8.4"
regex = "1.5.4"
image = "0.23.14"
atty = "0.2"